# continue-profiling-agent

./: .clang-format  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pytest.ini
.github/workflows/: release.yml
bpf/cmake/: BuildBPFLibs.cmake  CpaBpf.cmake  GenerateBTF.cmake  ModuleManage.cmake  PackWithSopacker.cmake
bpf/include/: cpa_bpf.h
bpf/include/cpa_bpf/: bpf_event.h  perf_stack_capture.h
bpf/src/: CMakeLists.txt
bpf/src/common/: CMakeLists.txt  bpf_event_poll.c  btf_helpers.c  core.c  trace_helpers.c
bpf/src/common/include/: bpf_event_poll.h  btf_helpers.h  core.h  core_fixes.bpf.h  trace_helpers.h
bpf/src/offcpu_capture/: CMakeLists.txt  offcpu_capture.bpf.c  offcpu_capture.c  offcpu_capture.h
bpf/src/perf_stack_capture/: CMakeLists.txt  perf_stack_capture.c
bpf/src/process_exit/: CMakeLists.txt  process_exit.bpf.c  process_exit.c
bpf/src/stack_capture/: CMakeLists.txt  stack_capture.bpf.c  stack_capture.c  stack_capture.h
bpf/tools/: cgroup_id.py  quiet_build.py
bpf/vmlinux/arm64/: vmlinux_504.h  vmlinux_515.h
bpf/vmlinux/x86/: vmlinux_505.h  vmlinux_515.h
cmake/: CMake310Compat.cmake  cpa.cmake
configs/: cpa-bench.conf
docs/en/: architecture.md  backend-modes.md  bpf-dependencies.md  build.md  deploy.md  development.md  kernel-compatibility.md  store-format.md  technical-deep-dive.md  testing.md  usage.md
docs/zh-CN/: architecture.md  backend-modes.md  bpf-dependencies.md  build.md  deploy.md  development.md  kernel-compatibility.md  store-format.md  technical-deep-dive.md  testing.md  usage.md
src/: cli.c  cli.h  cli_cmd_helper.c  cli_cmd_helper.h  cli_common.c  cli_common.h  cli_output.c  cli_output.h  uthash.h  utlist.h
src/cli_config_helper/: cli_config.c  cli_config.h
src/cli_counter_helper/: cli_counter_helper.c  cli_counter_helper.h
src/cli_dir_manager/: cli_dir_manager.c  cli_dir_manager.h
src/cli_profile_metadata/: cli_profile_metadata.c  cli_profile_metadata.h
src/cli_queue_helper/: cli_single_queue.c  cli_single_queue.h
src/cli_stackmap_helper/: cli_stackmap.c  cli_stackmap.h  cli_stackmap_private.h  stackmap_count_table.c  stackmap_count_table.h  stackmap_timewheel.c  stackmap_timewheel.h
src/cli_struct_helper/: cli_counter_heap_helper.c  cli_counter_heap_helper.h  cli_interval_array_helper.c  cli_interval_array_helper.h  cli_interval_tree_helper.c  cli_interval_tree_helper.h
src/cli_zstd_helper/: cli_zstd_helper.c  cli_zstd_helper.h
src/cpa_monitor/: .gitignore  README.md  cpa_backend_preflight.c  cpa_backend_preflight.h  cpa_bpf_capture.c  cpa_bpf_capture.h  cpa_capture_mode.c  cpa_capture_mode.h  cpa_capture_stats.h  cpa_debug.c  cpa_debug.h  cpa_drop_policy.c  cpa_drop_policy.h  cpa_env.c  cpa_env.h  cpa_monitor.c  cpa_nobpf_unwinder_event.c  cpa_nobpf_unwinder_event.h  cpa_perf_capture.c  cpa_runtime.c  cpa_runtime.h  cpa_stackmap_continuous.c  cpa_stackmap_continuous.h  cpa_stackmap_oneshot.c  cpa_stat.c  cpa_unwind_state.h  cpa_unwinder.c  cpa_unwinder.h  extract_cpa_workers.py
src/cpa_show/: README.md  cpa_show.c
src/cpa_show/doc/: cpa_show.en.md  cpa_show.md
src/cpa_show/include/: cpa_show_ffi.h
src/cpa_show/rust/: .gitignore  Cargo.toml  build.rs
src/cpa_show/rust/src/: cli.rs  ffi.rs  lib.rs
src/cpa_show/rust/src/cpa/: config.rs  filters.rs  maps.rs  metadata.rs  mod.rs  stackbin.rs  utils.rs
src/cpa_show/rust/src/profile/: mod.rs
src/cpa_show/rust/src/profile/loaders/: binary_dir.rs  mod.rs
src/cpa_show/rust/src/tui/: mod.rs  ui.rs
src/cpa_show/rust/tests/: cli_integration.rs  store_integration.rs
tests/: __init__.py  conftest.py
tests/cpa/: __init__.py  conftest.py  cpa_utils.py  test_asan_e2e.py  test_basic.py  test_cmake_310_compat.py  test_cpa.py  test_cpa_bpf_capture_lifecycle_static.py  test_cpa_runtime_lifecycle_static.py  test_cpa_show_record_selection_static.py  test_cpa_utils_selection.py  test_date_rotation.py  test_general_cli.py  test_kernel_modules.py  test_ksyms_reload.py  test_monitor_show.py  test_offcpu_probe.py  test_release_packaging_static.py  test_stackmap_empty_records.py  test_stackmap_timewheel.c  test_stackmap_timewheel.py  test_unwinder_reg_restore_static.py  test_workload_coverage.py
tests/cpa/resource/: compile_workloads.sh  offcpu_sym_c.c  run_workloads.py  sym_c.c  sym_go.go  sym_go_anon.go
tests/cpa/resource/rust_project/: Cargo.toml
tests/cpa/resource/rust_project/src/: main.rs
tests/cpa/resource/test_irq_disable/: Makefile  test_irq_disable.c
tests/cpa/resource/test_kworker/: Makefile  cpu_hogger.c
tools/: cpa_dead_code_scan.py  deploy_cpa.sh  install_cpa.sh
